out
    Finished dev [unoptimized + debuginfo] target(s) in 0.43s
     Running `target/debug/xtask run --release -- table 6706`
warning: structure field `PyObject` should have a snake case name
 --> /home/g/tail2/tail2-common/src/python/offsets.rs:3:9
  |
3 |         PyObject: struct {
  |         ^^^^^^^^ help: convert the identifier to snake case: `py_object`
  |
  = note: `#[warn(non_snake_case)]` on by default

warning: structure field `String` should have a snake case name
 --> /home/g/tail2/tail2-common/src/python/offsets.rs:6:9
  |
6 |         String: struct {
  |         ^^^^^^ help: convert the identifier to snake case (notice the capitalization): `string`

warning: structure field `PyTypeObject` should have a snake case name
  --> /home/g/tail2/tail2-common/src/python/offsets.rs:10:9
   |
10 |         PyTypeObject: struct {
   |         ^^^^^^^^^^^^ help: convert the identifier to snake case: `py_type_object`

warning: structure field `PyThreadState` should have a snake case name
  --> /home/g/tail2/tail2-common/src/python/offsets.rs:13:9
   |
13 |         PyThreadState: struct {
   |         ^^^^^^^^^^^^^ help: convert the identifier to snake case: `py_thread_state`

warning: structure field `PyInterpreterState` should have a snake case name
  --> /home/g/tail2/tail2-common/src/python/offsets.rs:19:9
   |
19 |         PyInterpreterState: struct {
   |         ^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `py_interpreter_state`

warning: structure field `PyRuntimeState` should have a snake case name
  --> /home/g/tail2/tail2-common/src/python/offsets.rs:22:9
   |
22 |         PyRuntimeState: struct {
   |         ^^^^^^^^^^^^^^ help: convert the identifier to snake case: `py_runtime_state`

warning: structure field `PyFrameObject` should have a snake case name
  --> /home/g/tail2/tail2-common/src/python/offsets.rs:25:9
   |
25 |         PyFrameObject: struct {
   |         ^^^^^^^^^^^^^ help: convert the identifier to snake case: `py_frame_object`

warning: structure field `PyCodeObject` should have a snake case name
  --> /home/g/tail2/tail2-common/src/python/offsets.rs:31:9
   |
31 |         PyCodeObject: struct {
   |         ^^^^^^^^^^^^ help: convert the identifier to snake case: `py_code_object`

warning: structure field `PyTupleObject` should have a snake case name
  --> /home/g/tail2/tail2-common/src/python/offsets.rs:37:9
   |
37 |         PyTupleObject: struct {
   |         ^^^^^^^^^^^^^ help: convert the identifier to snake case: `py_tuple_object`

warning: `tail2-common` (lib) generated 9 warnings
    Finished release [optimized + debuginfo] target(s) in 0.50s
warning: structure field `PyObject` should have a snake case name
 --> tail2-common/src/python/offsets.rs:3:9
  |
3 |         PyObject: struct {
  |         ^^^^^^^^ help: convert the identifier to snake case: `py_object`
  |
  = note: `#[warn(non_snake_case)]` on by default

warning: structure field `String` should have a snake case name
 --> tail2-common/src/python/offsets.rs:6:9
  |
6 |         String: struct {
  |         ^^^^^^ help: convert the identifier to snake case (notice the capitalization): `string`

warning: structure field `PyTypeObject` should have a snake case name
  --> tail2-common/src/python/offsets.rs:10:9
   |
10 |         PyTypeObject: struct {
   |         ^^^^^^^^^^^^ help: convert the identifier to snake case: `py_type_object`

warning: structure field `PyThreadState` should have a snake case name
  --> tail2-common/src/python/offsets.rs:13:9
   |
13 |         PyThreadState: struct {
   |         ^^^^^^^^^^^^^ help: convert the identifier to snake case: `py_thread_state`

warning: structure field `PyInterpreterState` should have a snake case name
  --> tail2-common/src/python/offsets.rs:19:9
   |
19 |         PyInterpreterState: struct {
   |         ^^^^^^^^^^^^^^^^^^ help: convert the identifier to snake case: `py_interpreter_state`

warning: structure field `PyRuntimeState` should have a snake case name
  --> tail2-common/src/python/offsets.rs:22:9
   |
22 |         PyRuntimeState: struct {
   |         ^^^^^^^^^^^^^^ help: convert the identifier to snake case: `py_runtime_state`

warning: structure field `PyFrameObject` should have a snake case name
  --> tail2-common/src/python/offsets.rs:25:9
   |
25 |         PyFrameObject: struct {
   |         ^^^^^^^^^^^^^ help: convert the identifier to snake case: `py_frame_object`

warning: structure field `PyCodeObject` should have a snake case name
  --> tail2-common/src/python/offsets.rs:31:9
   |
31 |         PyCodeObject: struct {
   |         ^^^^^^^^^^^^ help: convert the identifier to snake case: `py_code_object`

warning: structure field `PyTupleObject` should have a snake case name
  --> tail2-common/src/python/offsets.rs:37:9
   |
37 |         PyTupleObject: struct {
   |         ^^^^^^^^^^^^^ help: convert the identifier to snake case: `py_tuple_object`

warning: `tail2-common` (lib) generated 9 warnings
   Compiling tail2 v0.1.0 (/home/g/tail2/tail2)
error[E0599]: no variant named `Alloc` found for enum `Commands`
  --> tail2/src/main.rs:94:19
   |
94 |         Commands::Alloc { pid, uprobe } => {
   |                   ^^^^^ variant not found in `Commands`
   |
  ::: tail2/src/args.rs:10:1
   |
10 | pub enum Commands {
   | ----------------- variant `Alloc` not found here

For more information about this error, try `rustc --explain E0599`.
error: could not compile `tail2` due to previous error
thread 'main' panicked at 'assertion failed: status.success()', xtask/src/run.rs:42:5
stack backtrace:
   0: rust_begin_unwind
             at /rustc/897e37553bba8b42751c67658967889d11ecd120/library/std/src/panicking.rs:584:5
   1: core::panicking::panic_fmt
             at /rustc/897e37553bba8b42751c67658967889d11ecd120/library/core/src/panicking.rs:142:14
   2: core::panicking::panic
             at /rustc/897e37553bba8b42751c67658967889d11ecd120/library/core/src/panicking.rs:48:5
   3: xtask::run::build
             at ./xtask/src/run.rs:42:5
   4: xtask::run::run
             at ./xtask/src/run.rs:54:5
   5: xtask::main
             at ./xtask/src/main.rs:26:22
   6: core::ops::function::FnOnce::call_once
             at /rustc/897e37553bba8b42751c67658967889d11ecd120/library/core/src/ops/function.rs:248:5
note: Some details are omitted, run with `RUST_BACKTRACE=full` for a verbose backtrace.
